# panel

./: .dockerignore  .env.example  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.aio  Dockerfile.heavy  Dockerfile.heavy.aio  README.md  compose.aio.yml  compose.heavy.yml  compose.minimal.yml  compose.with-db-backups.yml  compose.yml  entrypoint.heavy.aio.sh  entrypoint.heavy.sh  flake.nix
.github/workflows/: build.yml  docs.yml  lint.yml  (+1 more)
.hooks/: pre-commit
.sqlx/: query-0ac611422a9141ac2b4130e2fbba1a327647dfe172cac06e02858e6de689cd99.json  query-0bf72c3f476e55ec3f2288d5c56a571076111b8ef4bba41929d5d5b699bb3af8.json  query-164c286d7acf7bd709a76796191bf79f62e07af28606c0c6daaaeff9b30937c4.json  query-1ac020f680f973dbdb71e45847c17c9b4d18cb8de5070838a2d503e708c2467e.json  query-1d07614764e4547a26949dbfaf972965e51c1af329c7b3546cb1160c38d657ae.json  query-29faebad29bcc73c8ca60f07bf16f28a6624c85c4fa348a34e5d655e9ed88332.json  query-2c57fa375cd0181fa611139f68fa404a11f6669795b531ac362a2d60ddb359a6.json  query-304c15a6c43cf3a1d3c76768f6d9003318067458a9fbb9e60886bdfa9f14d30b.json  query-337324b0029280577cea408a8f9ba1b05b09dc3b1a88b1b0fd20074f2ac0cd1f.json  query-35b2bf2efa6bcf771eb371f85cb8f99f3fec64b20d441d864a3225f4e5185b54.json  query-398d0163fc64b55f8c15ead4e012d5067455815a46c8ab0742aac9e5c01c0536.json  query-3a1ab7e0b85605fb976a65c175f22a756e5f039d16517df1661f957d5ff56eb6.json  query-4061f535ede3f7bad407b1c736d07dbc83adc27ecdc9dda7cb8302e1feb5e6a2.json  query-42660713d54e127ff3f5bec787522966a247f2198d48c5339f6dd62aff54fe7a.json  query-43e0c59357c9450fbd2561276fa6adfbdde3b5a4c8fcfcc293cb5578b286a892.json  query-4da24c065444ef822cf5a20e6397d5c2d09491c96857a0d43b0f6be905234283.json  query-52e285a4006f02ed2847d266b48b9e3e699f76855db88b462db016a71ce3ff77.json  query-5d4a9e805ee953b82980571d06976c76a1a994c4e32feef974fd79927654ac9e.json  query-638a6d333fafcc7586ab596b5de9209c30db4a23f98ca19518338b1c52714bfc.json  query-66589683f0abd49b9881e6f693a130e8f26e7aef526d151105f1fc756af8a504.json  query-6aa4f91c06acc3b60de6684e51d378603f940c8dcd1c4e74fa76c1caf8a00cb3.json  query-6aa8894fa6fe29abe284f879ebd4d298b37291fd81ac6e3a2f7a3d391ae06f68.json  query-7067371ce8ee092e71168efee9af31e691f14bf8bcb41f89bf9c8aa0a9a510fd.json  query-7425e46e30538fc586612e9f8ab8540fd7f5755eb720def57caaf9e6866cef44.json  query-7c206cdf28f62ed63366e1b309c3843f7f5614fffb86c3251ead62bc501610f1.json  query-7d0c360affa67fc83f19b896d7db59cd66643ed42b42b873b07f23286b40ea2b.json  query-7e0b7b7e2f1110b137651e903a28a988dae1ca68fe0677fdfa64bcbf47b90c93.json  query-871831ae9c2968e4234a1e46bca59235ba8fa819e29b3879ff3b8aa9badc8bd2.json  query-8c4b17b5d0d30b4e4a2c8676d34b30fae17c98f60ab462e6b3682d379dc5a8c3.json  query-8e8a0e01dd7b20bad13c68ff22e4543365c4e07e30a1bab0592cfa9bf82bb451.json  query-8ecf19b153559737642444db5353625a25cf2462a6a1953085fb64d8c39b0420.json  query-932372f87f5d2d713e3071efa147b3fcb4535edf03733700818c40f3449309f7.json  query-99791112b2c561bc375066f553c742a315e158a0abd2bfedd3608384a4fa57a1.json  query-9d8c45c22fce1fa73b21d534458de5ab2c5303a89dba9157c57b0e23547b43d0.json  query-9e9b1c68a1404334842520c24e0352225d08c906cc9877b19c2f229fdf0e6a8c.json  query-a35a1e5035287961738ef2cfe53ce5be369644892e3c4d54e15eee0d2ceec6d7.json  query-a4a8dec7fdd46ca359cb2096c0358cd77d09694d8bb7bc32472d48e5a3577671.json  query-a51845ac2740b1bdc395d80ea0a7249566752da59331d0c08f03382bb61f2949.json  query-a60cab7ee5b7babee97988c20c9f41b4f7006275d84fca28ddf7347af304e595.json  query-a8a3e85707e1f6d8b084d9704381e754ea1beb9572540ab04503f3f9ea18855f.json  (+21 more)
api-clients/wings-api/: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
api-clients/wings-api/generator-src/: generate-schema-object.ts  generate-schema-property.ts  index.ts
api-clients/wings-api/src/: client.rs  extra.rs  lib.rs  tunnel.rs
backend/: Cargo.toml
bins/all-in-one/: Cargo.toml  build.rs
bins/all-in-one/src/: bins.rs  main.rs
bins/base/: Cargo.toml
bins/base/src/: main.rs
database/: drizzle.config.ts  package.json  pnpm-lock.yaml
docker/: Dockerfile  Dockerfile.aio  Dockerfile.heavy  Dockerfile.heavy.aio  applyJson.js  entrypoint.heavy.aio.sh  entrypoint.heavy.sh
frontend/: biome.json  diff-translations.mts  format-translations.mts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
nix/: package.nix
schema-extension/core/: Cargo.toml
schema-extension/core/src/: lib.rs
shared/: Cargo.toml  build.rs
shared/mails/: account_created.html  added_to_server.html  connection_test.html  password_reset.html  removed_from_server.html  server_installed.html  server_restored.html
shared/src/: cache.rs  captcha.rs  database.rs  deserialize.rs  env.rs  events.rs  heavy.rs  jwt.rs  lib.rs  mail.rs  ntp.rs  payload.rs  permissions.rs  prelude.rs  response.rs  storage.rs  telemetry.rs  updates.rs  utils.rs
shared/src/cap/: mod.rs
shared/src/extensions/: background_tasks.rs  commands.rs  distr.rs  email_templates.rs  manager.rs  mod.rs  settings.rs
shared/src/models/: admin_activity.rs  announcement.rs  backup_configuration.rs  database_agent_host.rs  database_agent_template.rs  database_host.rs  egg_configuration.rs  egg_repository.rs  egg_repository_egg.rs  location.rs  location_database_agent_host.rs  location_database_host.rs  mod.rs  mount.rs  nest.rs  nest_egg.rs  nest_egg_mount.rs  nest_egg_variable.rs  node_allocation.rs  node_mount.rs  oauth_provider.rs  oauth_provider_mapping.rs  role.rs  server_activity.rs  server_allocation.rs  server_backup.rs  server_backup_group.rs  server_database.rs  server_database_instance.rs  server_mount.rs  server_schedule.rs  server_schedule_step.rs  server_subuser.rs  server_variable.rs  user.rs  user_activity.rs  user_api_key.rs  user_command_snippet.rs  user_oauth_link.rs  user_password_reset.rs  (+5 more)
shared/src/models/node/: mod.rs
shared/src/models/server/: mod.rs
shared/src/models/server_backup/: events.rs  mod.rs
shared/src/models/user/: auth.rs  mod.rs
shared/src/settings/: activity.rs  app.rs  mod.rs  ratelimits.rs  server.rs  user.rs
wings-api/: Cargo.toml
(+1636 files in other folders)
