[package]
name = "shared"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
wings-api = { workspace = true }
rule-validator = { workspace = true }
schema-extension-core = { workspace = true }
schema-extension-derive = { workspace = true }
rustis = { workspace = true }
aws-sdk-s3 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
utoipa = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
include_dir = { workspace = true }
tower-cookies = { workspace = true }
cron = { workspace = true }
lettre = { version = "0.11.17", default-features = false, features = ["tokio1-rustls-tls", "builder", "pool", "smtp-transport", "sendmail-transport", "file-transport"] }
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
toml = "1.0.1"
serde = { workspace = true }
serde_json_path = "0.7.2"
serde_json = { workspace = true }
serde_norway = { workspace = true }
rmp-serde = { workspace = true }
quick-xml = { workspace = true }
erased-serde = "0.4.10"
utoipa-axum = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
mongodb = { workspace = true }
webauthn-rs = { workspace = true }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
sha2 = { workspace = true }
dotenvy = { workspace = true }
colored = { workspace = true }
uuid = { workspace = true }
simple_crypt = "0.2.3"
cidr = { version = "0.3.1", features = ["serde"] }
garde = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
sentry = { workspace = true }
sentry-anyhow = { workspace = true }
russh = { workspace = true }
rand = { workspace = true }
constant_time_eq = "0.5.0"
urlencoding = { workspace = true }
ignore = "0.4.23"
futures-util = { workspace = true }
cap-std = "4.0.0"
semver = { workspace = true }
gix = { version = "0.84.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
tempfile = { workspace = true }
compact_str = { workspace = true }
nestify = { workspace = true }
sysinfo = { workspace = true }
accept-header = "0.2.3"
mime = "0.3.17"
moka = { version = "0.12.12", features = ["future"] }
serde_with = { workspace = true }
minijinja = { workspace = true }
sntpc-net-tokio = "1.0.1"
sntpc = { version = "0.10.1", features = ["std"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
hex = { workspace = true }
tower = "0.5.3"
parking_lot = { workspace = true }
ipnetwork = { version = "0.21.1", features = ["serde"] }
openssl = { version = "0.10.80", features = ["vendored"] } # temporary for webauthn-rs
tokio-tungstenite = { workspace = true }
