[package]
name = "panel-rs-aio"
rust-version = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
backend = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
sqlx = { workspace = true }
zstd = { workspace = true }
serde_norway = { workspace = true }
sysinfo = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.6.0"

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
