[package]
name = "panel-rs-aio"
rust-version = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
extension-internal-list = { path = "../../backend-extensions/internal-list" }
backend = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
sqlx = { workspace = true }
zstd = { workspace = true }
serde_norway = { workspace = true }
sysinfo = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
mimalloc = "0.1.52"

[build-dependencies]
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
