[package]
name = "panel-rs"
rust-version = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
default-run = "panel-rs"

[dependencies]
extension-internal-list = { path = "../../backend-extensions/internal-list" }
backend = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
colored = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
mimalloc = "0.1.52"
